# MnemoDyn_Draft

./: .gitignore  LICENSE  README.md  highdim_req.txt  pyproject.toml  tutorial.ipynb
coe/light/: abide_classification.py  abide_classification_normal.py  abide_dataset.py  adhd_200_diagnose.py  adhd_200_diagnose_450.py  adhd_200_sex_classification.py  adhd_dataset.py  adni_classification.py  adni_classification_amyloid.py  adni_classification_nc_mci.py  adni_classification_oversampling.py  adni_classification_oversampling_sex.py  adni_dataset.py  demo_data.py  demo_data_classification.py  hbn_classification.py  hbn_classification_450.py  hbn_dataset.py  hbn_regression.py  hcp_aging_classification.py  hcp_aging_regress.py  hcp_aging_regress_450.py  hcp_aging_regress_flanker.py  hcp_aging_regress_flanker_450.py  hcp_aging_regress_neuroticism.py  hcp_aging_regress_neuroticism_450_denoise.py  hcp_dataset.py  hcp_dataset_450.py  nkir_dataset.py  nkir_sex_classification.py  plot_save.py  ukbiobank_age_regression.py  ukbiobank_dataset.py  ukbiobank_sex_classification.py
coe/light/Result/ABIDE_classification_450_normal/: experiment.csv
coe/light/Result/ABIDE_classification_450_normal/Results/0/: all_losses.pkl  arguments.pkl  model_0.pt  result.pkl
coe/light/model/: conv1d_optimize.py  dense_layer.py  ema.py  main.py  main_denoise.py  main_denoise_450.py  main_masked_autoencode.py  main_masked_autoencode_jepa.py  main_orion_with_ema.py  normalizer.py  orion.py  publish_to_hf.py  test.py  test_mask.py  tutorial.ipynb  visualize.ipynb  visualize_parcellated_dtseries.py
coe/light/script/: abide_classifcation_normal.sh  adhd_200_diagnose.sh  adhd_200_diagnose_450.sh  adhd_200_sex_classification.sh  adhd_sex_classifcation_450.sh  adni_classification.sh  adni_classification_amyloid.sh  adni_classification_nc_mci.sh  adni_classification_sex.sh  adni_regress.sh  adni_regress_.sh  classification_test.sh  cleaned_adni_classification.sh  demo_data.sh  hbn_classification.sh  hbn_classification_424.sh  hbn_regression.sh  hcp_aging_424.sh  hcp_aging_450.sh  hcp_aging_classification.sh  hcp_aging_regress_age.sh  hcp_aging_regress_age_2.sh  hcp_aging_regress_flanker.sh  hcp_aging_regress_flanker_424.sh  hcp_aging_regress_flanker_450.sh  hcp_aging_regress_neuroticism.sh  hcp_aging_regress_neuroticism_424.sh  hcp_aging_regress_neuroticism_450.sh  hcp_hcp_aging.sh  infer_ukbiobank_mse_hcp_ckpt.sh  ncaam_regression.sh  nkir_classification.sh  nkir_classification_424.sh  nkir_classification_450.sh  orion.sh  orion_ema.sh  orion_mask_autoencode.sh  orion_mask_autoencode_jepa.sh  orion_noise.sh  orion_noise_450.sh  (+7 more)
coe/parcellation/: parcellate_ds005747.py  parcellate_hcp.py  parcellate_hcp_aging.py  parcellate_single.py  tar_and_push_ds005747_to_hf.py
coe/preprocess/: convert_dtseries.sh  pipeline.py  pipeline_parallel.py
